src/objects/Underwriter__c.object
<CustomObject>
    <fields>
        <fullName>Latest_Status_Change__c</fullName>
        <label>Latest Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AE_on_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE on Loan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Account Executive/PCS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attempted_Date__c</fullName>
        <label>Attempted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Tasks__c</fullName>
        <formula>IF ( OR 
(ISPICKVAL (  Status__c  , "Completed")), 1, 0)</formula>
        <label>Completed Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Sleep_Time__c</fullName>
        <label>Latest Sleep Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoanStatus__c</fullName>
        <formula>TEXT( Loan__r.LoanStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoanStatus*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <formula>Loan__r.Loan_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Loan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipName>Underwriters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Tasks__c</fullName>
        <formula>IF ( OR 
(ISPICKVAL ( Status__c , "Open")), 1, 0)</formula>
        <label>Open Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordered_Date__c</fullName>
        <label>Ordered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ordered_Tasks__c</fullName>
        <formula>IF ( OR 
(ISPICKVAL ( Status__c , "Ordered")), 1, 0)</formula>
        <label>Ordered Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCS_at_Loan_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PCS at Loan Level</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Partner Care Specialist</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Partner Care Specialist Lead</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <label>01 High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>02 Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <isActive>false</isActive>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Received_Tasks__c</fullName>
        <formula>IF ( OR 
(ISPICKVAL ( Status__c , "Received")), 1, 0)</formula>
        <label>Received Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision_Requested_Date__c</fullName>
        <label>Revision Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revision_Requests__c</fullName>
        <formula>IF ( OR 
(ISPICKVAL ( Status__c , "Revision Requested Conditions")), 1, 0)</formula>
        <label>Revision Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sleep_TaskCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleep Task?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UW_on_Loan__c</fullName>
        <formula>Loan__r.UW__r.FUll_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UW on Loan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Underwriter</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Underwriter Lead</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition_Reviewed_Date__c</fullName>
        <label>Condition Reviewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>TODAY() - DATEVALUE( Latest_Status_Change__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Closing_Date__c</fullName>
        <formula>Loan__r.Anticipated_Closing_Date__c</formula>
        <label>Anticipated Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>TEXT(Loan__r.Subject_Property_State__c)</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Client_Name__c</fullName>
        <formula>Loan__r.Client_Name__c</formula>
        <label>Related Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sleep_Task__c</fullName>
        <label>Sleep Duration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sleep_TaskCheckbox__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 Hours</fullName>
                </value>
                <value>
                    <fullName>4 Hours</fullName>
                </value>
                <value>
                    <fullName>6 Hours</fullName>
                </value>
                <value>
                    <fullName>Next Day</fullName>
                </value>
                <value>
                    <fullName>Next Week</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Loan__r.Client_Name__c</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Condition Reviewed</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Condition Added</fullName>
                </value>
                <value>
                    <fullName>Clear for Closing</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Attempted</fullName>
                </value>
                <value>
                    <fullName>Updated Suspense</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Suspense Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_Notes__c</fullName>
        <label>More Notes</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conditions Received</fullName>
                </value>
                <value>
                    <fullName>Appraisal Received</fullName>
                </value>
                <value>
                    <fullName>Title Received</fullName>
                </value>
                <value>
                    <fullName>Vendor Items Received</fullName>
                </value>
                <value>
                    <fullName>Loan Suspended</fullName>
                    <label>Suspense Requested</label>
                </value>
                <value>
                    <fullName>New Underwrite</fullName>
                </value>
                <value>
                    <fullName>Cooling off letter received</fullName>
                </value>
                <value>
                    <fullName>Credit Expiration Date is approaching</fullName>
                    <label>Credit Report Expiration Date</label>
                </value>
                <value>
                    <fullName>Loan is Aged over 30 Days</fullName>
                </value>
                <value>
                    <fullName>Loan - Conditionally Approved</fullName>
                </value>
                <value>
                    <fullName>Underwriter Clear to Close</fullName>
                </value>
                <value>
                    <fullName>FHA Case Number Expiration</fullName>
                </value>
                <value>
                    <fullName>Pay Off Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Pay Off 1 Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Pay Off 2 Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Pay Off 3 Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Appraisal Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Title Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Counseling Expiration Date</fullName>
                </value>
                <value>
                    <fullName>PCS Schedule Follow Up</fullName>
                </value>
                <value>
                    <fullName>Loan is suspended</fullName>
                </value>
                <value>
                    <fullName>Change In Circumstance</fullName>
                </value>
                <value>
                    <fullName>Document Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCS_Task_Bucket__c</fullName>
        <description>What bucket should task fall into on PCS Tasks page</description>
        <label>PCS Task Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>My Appointments</fullName>
                </value>
                <value>
                    <fullName>Final Goals Calls</fullName>
                </value>
                <value>
                    <fullName>Priority Loans</fullName>
                </value>
                <value>
                    <fullName>Initial/Post Suspense Call</fullName>
                </value>
                <value>
                    <fullName>Documents Uploaded</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
                <value>
                    <fullName>Conditions Reviewed By Underwriting</fullName>
                </value>
                <value>
                    <fullName>Aged Loans</fullName>
                </value>
                <value>
                    <fullName>CIC Request</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                    <isActive>false</isActive>
                    <label>10</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <isActive>false</isActive>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <isActive>false</isActive>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <isActive>false</isActive>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <isActive>false</isActive>
                    <label>9</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UW Tasks</label>
    <nameField>
        <displayFormat>UW-{00000}</displayFormat>
        <label>UWID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UW Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LoanStatus__c</columns>
        <columns>PCS_at_Loan_Level__c</columns>
        <columns>Loan__c</columns>
        <columns>Underwriter__c</columns>
        <columns>Loan_Number__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Master_Conditions_Reviewed_by_UW</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Property_State__c</columns>
        <columns>Anticipated_Closing_Date__c</columns>
        <columns>PCS_at_Loan_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Condition Reviewed,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS</value>
        </filters>
        <label>Master Conditions Reviewed by UW</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Master_PCS_Slept_Items</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>Sleep_TaskCheckbox__c</columns>
        <columns>Sleep_Task__c</columns>
        <columns>Property_State__c</columns>
        <columns>PCS_at_Loan_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Condition Reviewed,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS,Underwriter__c.PCS_Workflow</value>
        </filters>
        <label>Master PCS Slept Items</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_PCS_Slept_Items</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Property_State__c</columns>
        <columns>Sleep_Task__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Condition Reviewed,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS,Underwriter__c.PCS_Workflow</value>
        </filters>
        <label>PCS Sleeping Tasks</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AE_Loans_In_Suspense</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Latest_Status_Change__c</columns>
        <columns>Status__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Loan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>Loan is suspended</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Suspense Action Needed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.AE</value>
        </filters>
        <label>AE Loans In Suspense</label>
        <sharedTo>
            <role>Braveheart</role>
            <role>DMB_Jesse</role>
            <role>DMB_Josh</role>
            <role>wORMS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Loans_In_Suspense</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Latest_Status_Change__c</columns>
        <columns>Status__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Loan__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>Loan is suspended</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Suspense Action Needed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.AE</value>
        </filters>
        <label>My Loans In Suspense</label>
        <sharedTo>
            <role>Braveheart</role>
            <role>DMB_Jesse</role>
            <role>DMB_Josh</role>
            <role>wORMS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Aged_Loans</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>Property_State__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Anticipated_Closing_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS_Workflow</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>equals</operation>
            <value>Loan is Aged over 30 Days</value>
        </filters>
        <filters>
            <field>LoanStatus__c</field>
            <operation>notEqual</operation>
            <value>Denied,Loan Funded,Loan rescinded,Withdrawn</value>
        </filters>
        <label>Aged Loans</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Final_Goals_Calls</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Property_State__c</columns>
        <columns>Anticipated_Closing_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS_Workflow</value>
        </filters>
        <filters>
            <field>PCS_Task_Bucket__c</field>
            <operation>equals</operation>
            <value>Final Goals Calls</value>
        </filters>
        <label>Final Goals Calls</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Initial_Post_Suspense_Call</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Property_State__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS_Workflow</value>
        </filters>
        <filters>
            <field>PCS_Task_Bucket__c</field>
            <operation>equals</operation>
            <value>Initial/Post Suspense Call</value>
        </filters>
        <label>Initial/Post Suspense Call</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Master_Aged_Loans</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Property_State__c</columns>
        <columns>Anticipated_Closing_Date__c</columns>
        <columns>PCS_at_Loan_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS_Workflow</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>equals</operation>
            <value>Loan is Aged over 30 Days</value>
        </filters>
        <filters>
            <field>LoanStatus__c</field>
            <operation>notEqual</operation>
            <value>Denied,Loan Funded,Loan rescinded,Withdrawn</value>
        </filters>
        <label>Master Aged Loans</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Master_Final_Goals_Calls</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Property_State__c</columns>
        <columns>Anticipated_Closing_Date__c</columns>
        <columns>PCS_at_Loan_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS_Workflow</value>
        </filters>
        <filters>
            <field>PCS_Task_Bucket__c</field>
            <operation>equals</operation>
            <value>Final Goals Calls</value>
        </filters>
        <label>Master Final Goals Calls</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Master_Initial_Post_Suspense_Call</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>Latest_Status_Change__c</columns>
        <columns>Property_State__c</columns>
        <columns>Anticipated_Closing_Date__c</columns>
        <columns>PCS_at_Loan_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Ordered,Attempted</value>
        </filters>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriter__c.PCS_Workflow</value>
        </filters>
        <filters>
            <field>PCS_Task_Bucket__c</field>
            <operation>equals</operation>
            <value>Initial/Post Suspense Call</value>
        </filters>
        <label>Master Initial/Post Suspense Call</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Master_Notes_Added</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Client_Name__c</columns>
        <columns>LoanStatus__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Property_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sleep_TaskCheckbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PCS_Task_Bucket__c</field>
            <operation>equals</operation>
            <value>Notes</value>
        </filters>
        <label>Master Notes Added</label>
        <sharedTo>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
        </sharedTo>
    </listViews>
</CustomObject>